--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -129,14 +129,14 @@
 2020-11-30 <a href="#de05684f07"><strike>名古屋商科大学・情報(nolab)</strike></a><br />
 2020-12-01 <a href="#11ecfe8a64"><strike>東京工業大学・ソフトウェア工学分野</strike></a><br />
 2020-12-03 <a href="#6238f6a583"><strike>広島工業大学・コンピュータシステム</strike></a><br />
+2020-12-04 <a href="#3990b4d2ee"><strong>九州国際大学・ビジネスデータ分析</strong></a><br />
 2020-12-04 <a href="#0281f6d0a3"><strong>長岡技術科学大学・情報通信制御システム工学講座</strong></a><br />
 2020-12-04 <a href="#136bfdf8eb"><strike>岩手大学・情報基盤センター</strike></a><br />
-2020-12-04 <a href="#0cdf25b703">九州国際大学・ビジネスデータ分析</a><br />
-2020-12-05 <a href="#c8cf3bebc9">東京電機大学・情報システムデザイン</a><br />
-2020-12-05 <a href="#278c5c9f8b">東京都市大学・情報科学科・計算機工学分野</a><br />
+2020-12-05 <a href="#f9cf6eaecc"><strike>東京電機大学・情報システムデザイン</strike></a><br />
+2020-12-05 <a href="#619d35df10"><strike>東京都市大学・情報科学科・計算機工学分野</strike></a><br />
 2020-12-06 <a href="#76dc27d809">神奈川工科大学・情報学部・情報メディア学科</a><br />
 2020-12-07 <a href="#0d6435b414">名古屋市立大学・情報環境デザイン領域</a><br />
-2020-12-08 <a href="#ec5fe532c5">データ同化研究チーム</a><br />
+2020-12-08 <a href="#99f589c998"><strike>データ同化研究チーム</strike></a><br />
 2020-12-09 <a href="#5a5c54ec96">名古屋大学・システム研究所未来エレクトロニクス集積研究センター</a><br />
 2020-12-11 <a href="#0e24bf70bc">九州産業大学理工学部・機械工学科・メカトロニクス</a><br />
 2020-12-14 <a href="#e86784fc9e">静岡理工科大学・電子情報分野</a><br />
@@ -312,44 +312,11 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12008143
 <h2 id="東京大学人間エネルギー環境学分野-2020-11-30-top"><strike>東京大学・人間エネルギー環境学分野</strike> (2020-11-30) <span id="8a765a3a6e"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="名古屋商科大学情報nolab-2020-11-30-top"><strike>名古屋商科大学・情報(nolab)</strike> (2020-11-30) <span id="de05684f07"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京工業大学ソフトウェア工学分野-2020-12-01-top"><strike>東京工業大学・ソフトウェア工学分野</strike> (2020-12-01) <span id="11ecfe8a64"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="九州国際大学ビジネスデータ分析-2020-12-04-top"><strong>九州国際大学・ビジネスデータ分析</strong> (2020-12-04) <span id="3990b4d2ee"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="長岡技術科学大学情報通信制御システム工学講座-2020-12-04-top"><strong>長岡技術科学大学・情報通信制御システム工学講座</strong> (2020-12-04) <span id="0281f6d0a3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="岩手大学情報基盤センター-2020-12-04-top"><strike>岩手大学・情報基盤センター</strike> (2020-12-04) <span id="136bfdf8eb"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="九州国際大学ビジネスデータ分析-2020-12-04-top">九州国際大学・ビジネスデータ分析 (2020-12-04) <span id="0cdf25b703"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 35<br />
-id : D120101527 [NEW]<br />
-update : 2020年10月24日<br />
-univ : 九州国際大学・ビジネスデータ分析<br />
-title : 教員の公募について【ビジネスデータ分析、マネジメント入門　教授、准教授または助教】<br />
-field : 情報学 - 情報学基礎<br />
-post : 教授相当 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年12月04日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120101527&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120101527&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="東京電機大学情報システムデザイン-2020-12-05-top">東京電機大学・情報システムデザイン (2020-12-05) <span id="c8cf3bebc9"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 41<br />
-id : D120091842 [NEW]<br />
-update : 2020年10月07日<br />
-univ : 東京電機大学・情報システムデザイン<br />
-title : 東京電機大学・理工学部理工学科・情報システムデザイン学系・准教授公募(情報学部門)<br />
-field : 情報学 - 情報学フロンティア 人文学 - 芸術学<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年12月05日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091842&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091842&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="東京都市大学情報科学科計算機工学分野-2020-12-05-top">東京都市大学・情報科学科・計算機工学分野 (2020-12-05) <span id="278c5c9f8b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 23<br />
-id : D120111106 [NEW]<br />
-update : 2020年11月19日<br />
-univ : 東京都市大学・情報科学科・計算機工学分野<br />
-title : 情報科学科・准教授または講師（常勤）の公募（計算機工学分野）<br />
-field : 情報学 - 計算基盤 工学 - 電気電子工学<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年12月05日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120111106&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120111106&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="東京電機大学情報システムデザイン-2020-12-05-top"><strike>東京電機大学・情報システムデザイン</strike> (2020-12-05) <span id="f9cf6eaecc"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="東京都市大学情報科学科計算機工学分野-2020-12-05-top"><strike>東京都市大学・情報科学科・計算機工学分野</strike> (2020-12-05) <span id="619d35df10"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="神奈川工科大学情報学部情報メディア学科-2020-12-06-top">神奈川工科大学・情報学部・情報メディア学科 (2020-12-06) <span id="76dc27d809"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>id : D120102126 [NEW]<br />
 update : 2020年10月31日<br />
@@ -373,18 +340,7 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年11月05日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090476&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090476&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="データ同化研究チーム-2020-12-08-top">データ同化研究チーム (2020-12-08) <span id="ec5fe532c5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 20<br />
-id : D120101517 [NEW]<br />
-update : 2020年10月24日<br />
-univ : 国立研究開発法人理化学研究所<br />
-title : 研究員もしくは上級研究員（無期雇用職）募集（20K69）（データ同化研究チーム）<br />
-field : 情報学 - 計算基盤 数物系科学 - 地球惑星科学 総合理工 - 計算科学<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年12月08日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120101517&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120101517&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="データ同化研究チーム-2020-12-08-top"><strike>データ同化研究チーム</strike> (2020-12-08) <span id="99f589c998"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="名古屋大学システム研究所未来エレクトロニクス集積研究センター-2020-12-09-top">名古屋大学・システム研究所未来エレクトロニクス集積研究センター (2020-12-09) <span id="5a5c54ec96"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 29<br />
 id : D120110979 [NEW]<br />
