--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -18,8 +18,8 @@
 2020-07-31 <a href="#88df76a674"><strike>九州国際大.情報学基礎✘badformat</strike></a><br />
 2020-07-31 <a href="#5be1a16a7d"><strike>法政大.信号処理、統計、計測、機械学習分野✘推薦書</strike></a><br />
 2020-08-12 <a href="#eba26c37a7"><strong>三重大.知能工学講座・データサイエンス2jobs</strong></a><br />
-2020-08-17 <a href="#6813c0372e"><strike>NAIST.ロボティクス分野</strike></a><br />
 2020-08-17 <a href="#cc72ebc329"><strong>筑波大</strong></a><br />
+2020-08-17 <a href="#6813c0372e"><strike>NAIST.ロボティクス分野</strike></a><br />
 2020-08-19 <a href="#6c5b98a780"><strong>岡山県立大.知覚情報処理</strong></a><br />
 2020-08-19 <a href="#ebe3a401a3"><strike>近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs✘推薦書</strike></a><br />
 2020-08-21 <a href="#ec0c9d0945"><strong>玉川大学.国際教養学科✌jrec</strong></a><br />
@@ -34,56 +34,56 @@
 2020-08-31 <a href="#4bb5c2134d"><strike>日本工業大✘推薦書</strike></a><br />
 2020-08-31 <a href="#5dc0b999ce"><strike>東京都立大.情報学基礎.2posts</strike></a><br />
 2020-08-31 <a href="#d0f5a713b7"><strike>東京都市大学・経営情報システム</strike></a><br />
-2020-08-31 <a href="#32698d566d"><strike>工学院大学.複合領域-デザイン学-総合理工-計算科学</strike></a><br />
 2020-08-31 <a href="#37848dfdf7"><strike>東京電機大.人間情報学✘推薦書</strike></a><br />
+2020-08-31 <a href="#32698d566d"><strike>工学院大学.複合領域-デザイン学-総合理工-計算科学</strike></a><br />
+2020-08-31 <a href="#5a15378daf"><strike>滋賀県立大.センシング工学分野</strike></a><br />
 2020-08-31 <a href="#85650c17d1"><strike>京都大.通信情報システム中✘試用</strike></a><br />
-2020-08-31 <a href="#f7ab33943c"><strong>大阪大.情報科学☢試用6カ月✌jrec</strong></a><br />
 2020-08-31 <a href="#840cca4261"><strike>株式会社Nextremer.計算科学.quantum</strike></a><br />
 2020-08-31 <a href="#e9f602ab47"><strong>岡山大学.サイバーフィジカル情報の応用研究</strong></a><br />
-2020-08-31 <a href="#fe42bd3f2b"><strong>駒澤大.情報分野✌jrec</strong></a><br />
-2020-08-31 <a href="#5a15378daf"><strike>滋賀県立大.センシング工学分野</strike></a><br />
-2020-08-31 <a href="#3701387ba6"><strong>東京都市大学・情報学</strong></a><br />
-2020-08-31 <a href="#1a938c377d"><strong>立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース★english</strong></a><br />
 2020-08-31 <a href="#f72003b137"><strike>岡山理科大(ous).情報数理.情報工学.2posts✘(still)toomuchwork</strike></a><br />
+2020-08-31 <a href="#1a938c377d"><strong>立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース★english</strong></a><br />
+2020-08-31 <a href="#3701387ba6"><strong>東京都市大学・情報学</strong></a><br />
+2020-08-31 <a href="#f7ab33943c"><strong>大阪大.情報科学☢試用6カ月✌jrec</strong></a><br />
+2020-08-31 <a href="#fe42bd3f2b"><strong>駒澤大.情報分野✌jrec</strong></a><br />
 2020-09-07 <a href="#69b2d17e9b"><strike>明治大✘推薦書</strike></a><br />
-2020-09-10 <a href="#66bd3309b3"><strong>公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</strong></a><br />
-2020-09-10 <a href="#35125b0dbe"><strike>公立はこだて未来大</strike></a><br />
 2020-09-10 <a href="#eb8e5a0a84"><strike>広島工業大学・情報ネットワーク(did.not.make.it)</strike></a><br />
+2020-09-10 <a href="#35125b0dbe"><strike>公立はこだて未来大</strike></a><br />
+2020-09-10 <a href="#66bd3309b3"><strong>公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</strong></a><br />
 2020-09-11 <a href="#2b70b01167"><strong>★金沢大学.IoT及び情報通信分野</strong></a><br />
 2020-09-11 <a href="#1cb0d08d32"><strong>法政大学.情報科学部コンピュータ科学科✌freeform✌jrecin</strong></a><br />
 2020-09-11 <a href="#08ce89f323"><strike>北海道.情報科学研究院</strike></a><br />
 2020-09-11 <a href="#439bd40748"><strike>明治大学・統計科学・統計数学・知能情報科学</strike></a><br />
+2020-09-14 <a href="#dc97c1915a"><strong>★東京理科大工学部情報工学科インテリジェントシステム分野</strong></a><br />
 2020-09-14 <a href="#3e98d45b55"><strike>国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</strike></a><br />
 2020-09-14 <a href="#391814b22c"><strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike></a><br />
-2020-09-14 <a href="#dc97c1915a"><strong>★東京理科大工学部情報工学科インテリジェントシステム分野</strong></a><br />
-2020-09-15 <a href="#bc9b288934"><strong>青山学院大.情報社会科学✌freeform</strong></a><br />
 2020-09-15 <a href="#2dc7263a05"><strike>岡山大学.ハードウェア.ソフトウェア</strike></a><br />
+2020-09-15 <a href="#bc9b288934"><strong>青山学院大.情報社会科学✌freeform</strong></a><br />
+2020-09-18 <a href="#a7a4cfb276"><strike>京都先端科学大学・統計やビジネスデータの見方</strike></a><br />
 2020-09-18 <a href="#f23bf169da"><strike>東京電機大学・情報学部門</strike></a><br />
 2020-09-18 <a href="#9dd8a9b667"><strong>▲長岡技術科学大.情報・経営システム工学専攻</strong></a><br />
-2020-09-18 <a href="#a7a4cfb276"><strike>京都先端科学大学・統計やビジネスデータの見方</strike></a><br />
 2020-09-20 <a href="#652ff68ecc"><strike>松本大学.データサイエンス.情報学-データサイエンス</strike></a><br />
 2020-09-21 <a href="#8c0538b87d"><strike>法政大学.情報学・計算基盤(picked.another.200911)</strike></a><br />
 2020-09-23 <a href="#0782a814ca"><strike>岐阜聖徳学園大学・情報学</strike></a><br />
 2020-09-25 <a href="#6a2cb633b3"><strike>★東京理科大.数理モデリング、知能数理分野</strike></a><br />
-2020-09-25 <a href="#8ab7884d11"><strike>東京大学.高性能計算地球科学分野</strike></a><br />
-2020-09-25 <a href="#8b54bc80b6"><strike>岩手県立大.人工知能コース</strike></a><br />
 2020-09-25 <a href="#a899e6ba64"><strong>▲成蹊大学.総合理工-計算科学-数物系科学</strong></a><br />
 2020-09-25 <a href="#f89d94d8d4"><strike>▲日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野☢福島</strike></a><br />
+2020-09-25 <a href="#8b54bc80b6"><strike>岩手県立大.人工知能コース</strike></a><br />
+2020-09-25 <a href="#8ab7884d11"><strike>東京大学.高性能計算地球科学分野</strike></a><br />
 2020-09-28 <a href="#2277a8f108"><strike>岡山大学・知能機械システム学講座</strike></a><br />
-2020-09-30 <a href="#8259a50aec"><strike>名城大学・情報学、統計学、フィールド調査</strike></a><br />
-2020-09-30 <a href="#83e6037ba4"><strike>株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</strike></a><br />
-2020-09-30 <a href="#1444194ab3"><strike>北海道大学.数理科学・応用数学分野</strike></a><br />
-2020-09-30 <a href="#bf3d9f6641"><strike>兵庫県立大学・情報通信工学</strike></a><br />
-2020-09-30 <a href="#c322643ba2">兵庫県立大学.情報学-情報通信-ネットワーク</a><br />
 2020-09-30 <a href="#1ac3083abc"><strike>兵庫県立大学.AI・IoT・ビックデータ</strike></a><br />
+2020-09-30 <a href="#83e6037ba4"><strike>株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</strike></a><br />
+2020-09-30 <a href="#8259a50aec"><strike>名城大学・情報学、統計学、フィールド調査</strike></a><br />
+2020-09-30 <a href="#c322643ba2">兵庫県立大学.情報学-情報通信-ネットワーク</a><br />
+2020-09-30 <a href="#bf3d9f6641"><strike>兵庫県立大学・情報通信工学</strike></a><br />
+2020-09-30 <a href="#1444194ab3"><strike>北海道大学.数理科学・応用数学分野</strike></a><br />
 2020-09-30 <a href="#bad52fddb6"><strike>熊本大学・ビッグデータ</strike></a><br />
-2020-09-30 <a href="#a31425d7c9"><strike>▲静岡理工科大学.電子情報分野(smalluni)</strike></a><br />
+2020-09-30 <a href="#ade6a37b46"><strike>▲成蹊大.計算科学(1of2)</strike></a><br />
 2020-09-30 <a href="#829301a770"><strike>岡山大学・電気電子機能開発・powerelec</strike></a><br />
 2020-09-30 <a href="#384da3400c"><strong>福岡大.情報学</strong></a><br />
 2020-09-30 <a href="#46260b9624"><strong>★龍谷大学・情報科学分野</strong></a><br />
 2020-09-30 <a href="#417a88b524"><strong>▲東京都市大学・情報理論</strong></a><br />
 2020-09-30 <a href="#00024ca602"><strong>‼★公立はこだて未来大学・情報システム</strong></a><br />
-2020-09-30 <a href="#ade6a37b46"><strike>▲成蹊大.計算科学(1of2)</strike></a><br />
+2020-09-30 <a href="#a31425d7c9"><strike>▲静岡理工科大学.電子情報分野(smalluni)</strike></a><br />
 2020-10-02 <a href="#20472a9b61"><strike>明星大.データアナリティクス✘推薦書</strike></a><br />
 2020-10-08 <a href="#72ef55640f"><strike>東洋大学・情報社会の総合政策</strike></a><br />
 2020-10-09 <a href="#bc2e00886c"><strike>立命館大学.システム制御工学.無線通信・電波</strike></a><br />
@@ -134,11 +134,10 @@
 2020-12-04 <a href="#136bfdf8eb"><strike>岩手大学・情報基盤センター</strike></a><br />
 2020-12-05 <a href="#f9cf6eaecc"><strike>東京電機大学・情報システムデザイン</strike></a><br />
 2020-12-05 <a href="#619d35df10"><strike>東京都市大学・情報科学科・計算機工学分野</strike></a><br />
-2020-12-06 <a href="#76dc27d809">神奈川工科大学・情報学部・情報メディア学科</a><br />
-2020-12-07 <a href="#0d6435b414">名古屋市立大学・情報環境デザイン領域</a><br />
+2020-12-06 <a href="#065239080a"><strike>神奈川工科大学・情報学部・情報メディア学科</strike></a><br />
 2020-12-08 <a href="#99f589c998"><strike>データ同化研究チーム</strike></a><br />
-2020-12-09 <a href="#5a5c54ec96">名古屋大学・システム研究所未来エレクトロニクス集積研究センター</a><br />
-2020-12-11 <a href="#0e24bf70bc">九州産業大学理工学部・機械工学科・メカトロニクス</a><br />
+2020-12-09 <a href="#7bfa40d044"><strike>名古屋大学・システム研究所未来エレクトロニクス集積研究センター</strike></a><br />
+2020-12-11 <a href="#9e83c46774"><strike>九州産業大学理工学部・機械工学科・メカトロニクス</strike></a><br />
 2020-12-14 <a href="#e86784fc9e">静岡理工科大学・電子情報分野</a><br />
 2020-12-14 <a href="#4eaaa78d12">東京通信大学・情報システム分野</a><br />
 2020-12-15 <a href="#8897af2e44">琉球大学・総合情報処理センター</a><br />
@@ -317,54 +316,10 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12008143
 <h2 id="岩手大学情報基盤センター-2020-12-04-top"><strike>岩手大学・情報基盤センター</strike> (2020-12-04) <span id="136bfdf8eb"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京電機大学情報システムデザイン-2020-12-05-top"><strike>東京電機大学・情報システムデザイン</strike> (2020-12-05) <span id="f9cf6eaecc"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京都市大学情報科学科計算機工学分野-2020-12-05-top"><strike>東京都市大学・情報科学科・計算機工学分野</strike> (2020-12-05) <span id="619d35df10"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="神奈川工科大学情報学部情報メディア学科-2020-12-06-top">神奈川工科大学・情報学部・情報メディア学科 (2020-12-06) <span id="76dc27d809"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>id : D120102126 [NEW]<br />
-update : 2020年10月31日<br />
-univ : 神奈川工科大学・情報学部・情報メディア学科<br />
-title : 神奈川工科大学　情報学部　情報メディア学科　教員（教授または准教授または助教）公募　１名<br />
-field : 情報学 - 人間情報学<br />
-post : 教授相当 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年12月06日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120102126&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120102126&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="名古屋市立大学情報環境デザイン領域-2020-12-07-top">名古屋市立大学・情報環境デザイン領域 (2020-12-07) <span id="0d6435b414"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 40<br />
-id : D120090476 [NEW]<br />
-update : 2020年09月10日<br />
-univ : 名古屋市立大学・情報環境デザイン領域<br />
-title : 教員の公募について（情報環境デザイン領域）<br />
-field : 工学 - 電気電子工学 情報学 - 全て<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月05日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090476&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090476&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="神奈川工科大学情報学部情報メディア学科-2020-12-06-top"><strike>神奈川工科大学・情報学部・情報メディア学科</strike> (2020-12-06) <span id="065239080a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="データ同化研究チーム-2020-12-08-top"><strike>データ同化研究チーム</strike> (2020-12-08) <span id="99f589c998"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="名古屋大学システム研究所未来エレクトロニクス集積研究センター-2020-12-09-top">名古屋大学・システム研究所未来エレクトロニクス集積研究センター (2020-12-09) <span id="5a5c54ec96"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 29<br />
-id : D120110979 [NEW]<br />
-update : 2020年11月18日<br />
-univ : 名古屋大学・システム研究所未来エレクトロニクス集積研究センター<br />
-title : 名古屋大学未来材料・システム研究所未来エレクトロニクス集積研究センターシステム応用部　准教授または講師の公募<br />
-field : 工学 - 電気電子工学 工学 - 電気工学 工学 - 電力工学、電力変換、電気機器<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年12月09日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120110979&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120110979&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="九州産業大学理工学部機械工学科メカトロニクス-2020-12-11-top">九州産業大学理工学部・機械工学科・メカトロニクス (2020-12-11) <span id="0e24bf70bc"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 69<br />
-id : D120111343 [NEW]<br />
-update : 2020年11月21日<br />
-univ : 九州産業大学理工学部・機械工学科・メカトロニクス<br />
-title : 九州産業大学理工学部　機械工学科（メカトロニクス）専任教員【准教授、講師または助教】の公募について<br />
-field : 工学 - 機械工学 工学 - ロボット工学<br />
-post : 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年12月11日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120111343&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120111343&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="名古屋大学システム研究所未来エレクトロニクス集積研究センター-2020-12-09-top"><strike>名古屋大学・システム研究所未来エレクトロニクス集積研究センター</strike> (2020-12-09) <span id="7bfa40d044"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="九州産業大学理工学部機械工学科メカトロニクス-2020-12-11-top"><strike>九州産業大学理工学部・機械工学科・メカトロニクス</strike> (2020-12-11) <span id="9e83c46774"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="静岡理工科大学電子情報分野-2020-12-14-top">静岡理工科大学・電子情報分野 (2020-12-14) <span id="e86784fc9e"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>id : D120110088 [NEW]<br />
 update : 2020年11月05日<br />
