--- a/gcal/deadlines.html
+++ b/gcal/deadlines.html
@@ -1,61 +1,61 @@
 <h1 id="deadlines">deadlines <span id="top"></span></h1>
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <p>this file is generated automatically, do not make manual changes to it!</p>
-<p>2020-12-14 <a href="#94084be711">★NetSoft@Tokyo</a><br />
-2020-12-15 <a href="#acfde93fd9">NextGenSys(NGS)</a><br />
-2020-12-15 <a href="#e8351887c5">★IEEE.ACM.CCGrid</a><br />
-2020-12-15 <a href="#2b0773861d">IEEE.GI(infocom).global.internet</a><br />
-2020-12-15 <a href="#5db313374b">INFOCOM</a><br />
-2020-12-15 <a href="#4b4fec8fbc">INFOCOMw.security.privacy.bigdata</a><br />
-2020-12-15 <a href="#95dff4918f">(J)MDPI.IoE</a><br />
-2020-12-15 <a href="#225a9f5823">PerCom.(pervasive).demos</a><br />
-2020-12-20 <a href="#8350073220">★ⒿIJITS.infotech.and.security</a><br />
-2020-12-20 <a href="#7f20e9d923">(J)MDPI.smart.sensing.D2D</a><br />
-2020-12-21 <a href="#7eae359439">(J)Springer.JONS.netmng.with.AI</a><br />
-2020-12-21 <a href="#b928038e26">(J)Elsevier.IoT.for.COVID19</a><br />
-2020-12-31 <a href="#e9418fead9">(J)MDPI.WirelessSensors.ITS</a><br />
-2020-12-31 <a href="#3a66dd6c44">★ⒿElectronics.IoT</a><br />
-2020-12-31 <a href="#94d22aa9c9">(J)MDPI.Sensing.and.IoT</a><br />
-2020-12-31 <a href="#80b1946fa3">(J)Elsevier(IoT.attacks)</a><br />
-2020-12-31 <a href="#0625cc5268">ⒿMDPI.edge.drone.swarms</a><br />
-2021-01-01 <a href="#b0632a7f9f">(J)ComMag.Network4Covid</a><br />
-2021-01-03 <a href="#501cccfd6b">IEEE.ICFEC.fog.edge</a><br />
-2021-01-06 <a href="#75f6e77a37">IEEE.ICDCS.distributed.comp.systems</a><br />
-2021-01-07 <a href="#b43039b2fd">EAI.Mobimedia.mobilemultimedia</a><br />
-2021-01-08 <a href="#c66045893a">ITS(IM).autonomous.vehicles</a><br />
-2021-01-10 <a href="#b30bc46ee1">jour.ICTexpress.edge</a><br />
-2021-01-10 <a href="#1c2d8187b3">ⒿICTExpress.mobile.edge.comp</a><br />
-2021-01-15 <a href="#a327355003">(J)ASOC.CompIntel.(transformative)</a><br />
-2021-01-15 <a href="#900c2981f3">IEEE.WTMC.traffic.measurement</a><br />
-2021-01-15 <a href="#fd2b7dd4d0">(J)Elsevier.ASOC.transformative.computing</a><br />
-2021-01-15 <a href="#e0300c3974">IEEE.WTMC.trafficmeasurement4sec</a><br />
-2021-01-15 <a href="#2be1f3820b">IFIP.Networking</a><br />
-2021-01-15 <a href="#ec04095403">(J)MDPI.Sensors.human.motion</a><br />
-2021-01-15 <a href="#5cd5fc2e1e">journal.ISF.AI.for.covid</a><br />
-2021-01-15 <a href="#4e5d9e537f">J.Elsevier.compintelligence</a><br />
-2021-01-15 <a href="#cc930b8f61">COMPSAC.intel.collab.world</a><br />
-2021-01-20 <a href="#fd0b8c0c97">IEEE.ICC.emerging.topics.in.6G</a><br />
-2021-01-20 <a href="#2f3cd7fa3a">ACM.SIGCOMM</a><br />
-2021-01-20 <a href="#29c27149d6">ICC.GreenSmartEnvs</a><br />
-2021-01-20 <a href="#1b1acc2f42">ICCw.DDINS.intelligence4nets</a><br />
-2021-01-30 <a href="#0aa6d448d0">(J)EAI.GeneralCollectiveIntelligence</a><br />
-2021-01-31 <a href="#2df4e5c249">MDPI.sustain</a><br />
-2021-01-31 <a href="#bfc45ab4fc">(J)Springer.AI4people</a><br />
-2021-02-07 <a href="#9e2242d9ba">INFOCOM.demos.posters</a><br />
-2021-02-15 <a href="#0a05807fbd">(J)MDPI.Signals.cybersec.resilience</a><br />
-2021-02-20 <a href="#323e5a063d">(J)JCN.covid19</a><br />
-2021-02-21 <a href="#f250e192a6">(J)MDPI.mobile.computing</a><br />
-2021-02-21 <a href="#50d095191a">(J)MDPI.Telecom.Journal</a><br />
-2021-02-25 <a href="#f10836f2f4">ⒿIEEEJ.intell.wireless.control.systems</a><br />
-2021-02-28 <a href="#9f8aa2901e">(J)Elsevier.ICN(blockchain.for.covid)</a><br />
-2021-02-28 <a href="#9582ef3fcf">jour.mdpi.vehicularfleets</a><br />
-2021-03-10 <a href="#d093aa63fb">ficloud.future.cloud</a><br />
-2021-03-15 <a href="#95596e2fac">KSEM.knowledge</a><br />
-2021-03-21 <a href="#394a236f89">ⒿIEEEsensors.inforpositioning</a><br />
+<p>2021-06-30 <a href="#bd08655f42">ⒿMDPI.HPC.math</a><br />
+2021-03-31 <a href="#a5a834d6a2">(J)ACMIntTechJ.multiagent.systems.for.IoT</a><br />
 2021-03-31 <a href="#a9927a6859">(J)IEEE.Sensors.indoor.positioning</a><br />
 2021-03-31 <a href="#6722d0de66">(J)Elsevier(edge.iot)</a><br />
-2021-03-31 <a href="#a5a834d6a2">(J)ACMIntTechJ.multiagent.systems.for.IoT</a><br />
-2021-06-30 <a href="#bd08655f42">ⒿMDPI.HPC.math</a></p>
+2021-03-21 <a href="#394a236f89">ⒿIEEEsensors.inforpositioning</a><br />
+2021-03-15 <a href="#95596e2fac">KSEM.knowledge</a><br />
+2021-03-10 <a href="#d093aa63fb">ficloud.future.cloud</a><br />
+2021-02-28 <a href="#9582ef3fcf">jour.mdpi.vehicularfleets</a><br />
+2021-02-28 <a href="#9f8aa2901e">(J)Elsevier.ICN(blockchain.for.covid)</a><br />
+2021-02-25 <a href="#f10836f2f4">ⒿIEEEJ.intell.wireless.control.systems</a><br />
+2021-02-21 <a href="#50d095191a">(J)MDPI.Telecom.Journal</a><br />
+2021-02-21 <a href="#f250e192a6">(J)MDPI.mobile.computing</a><br />
+2021-02-20 <a href="#323e5a063d">(J)JCN.covid19</a><br />
+2021-02-15 <a href="#0a05807fbd">(J)MDPI.Signals.cybersec.resilience</a><br />
+2021-02-07 <a href="#9e2242d9ba">INFOCOM.demos.posters</a><br />
+2021-01-31 <a href="#2df4e5c249">MDPI.sustain</a><br />
+2021-01-31 <a href="#bfc45ab4fc">(J)Springer.AI4people</a><br />
+2021-01-30 <a href="#0aa6d448d0">(J)EAI.GeneralCollectiveIntelligence</a><br />
+2021-01-20 <a href="#1b1acc2f42">ICCw.DDINS.intelligence4nets</a><br />
+2021-01-20 <a href="#2f3cd7fa3a">ACM.SIGCOMM</a><br />
+2021-01-20 <a href="#29c27149d6">ICC.GreenSmartEnvs</a><br />
+2021-01-20 <a href="#fd0b8c0c97">IEEE.ICC.emerging.topics.in.6G</a><br />
+2021-01-15 <a href="#2be1f3820b">IFIP.Networking</a><br />
+2021-01-15 <a href="#cc930b8f61">COMPSAC.intel.collab.world</a><br />
+2021-01-15 <a href="#900c2981f3">IEEE.WTMC.traffic.measurement</a><br />
+2021-01-15 <a href="#e0300c3974">IEEE.WTMC.trafficmeasurement4sec</a><br />
+2021-01-15 <a href="#5cd5fc2e1e">journal.ISF.AI.for.covid</a><br />
+2021-01-15 <a href="#a327355003">(J)ASOC.CompIntel.(transformative)</a><br />
+2021-01-15 <a href="#4e5d9e537f">J.Elsevier.compintelligence</a><br />
+2021-01-15 <a href="#fd2b7dd4d0">(J)Elsevier.ASOC.transformative.computing</a><br />
+2021-01-15 <a href="#ec04095403">(J)MDPI.Sensors.human.motion</a><br />
+2021-01-10 <a href="#1c2d8187b3">ⒿICTExpress.mobile.edge.comp</a><br />
+2021-01-10 <a href="#b30bc46ee1">jour.ICTexpress.edge</a><br />
+2021-01-08 <a href="#c66045893a">ITS(IM).autonomous.vehicles</a><br />
+2021-01-07 <a href="#b43039b2fd">EAI.Mobimedia.mobilemultimedia</a><br />
+2021-01-06 <a href="#75f6e77a37">IEEE.ICDCS.distributed.comp.systems</a><br />
+2021-01-03 <a href="#501cccfd6b">IEEE.ICFEC.fog.edge</a><br />
+2021-01-01 <a href="#b0632a7f9f">(J)ComMag.Network4Covid</a><br />
+2020-12-31 <a href="#0625cc5268">ⒿMDPI.edge.drone.swarms</a><br />
+2020-12-31 <a href="#80b1946fa3">(J)Elsevier(IoT.attacks)</a><br />
+2020-12-31 <a href="#94d22aa9c9">(J)MDPI.Sensing.and.IoT</a><br />
+2020-12-31 <a href="#e9418fead9">(J)MDPI.WirelessSensors.ITS</a><br />
+2020-12-31 <a href="#3a66dd6c44">★ⒿElectronics.IoT</a><br />
+2020-12-21 <a href="#b928038e26">(J)Elsevier.IoT.for.COVID19</a><br />
+2020-12-21 <a href="#7eae359439">(J)Springer.JONS.netmng.with.AI</a><br />
+2020-12-20 <a href="#7f20e9d923">(J)MDPI.smart.sensing.D2D</a><br />
+2020-12-20 <a href="#8350073220">★ⒿIJITS.infotech.and.security</a><br />
+2020-12-15 <a href="#225a9f5823">PerCom.(pervasive).demos</a><br />
+2020-12-15 <a href="#95dff4918f">(J)MDPI.IoE</a><br />
+2020-12-15 <a href="#acfde93fd9">NextGenSys(NGS)</a><br />
+2020-12-15 <a href="#4b4fec8fbc">INFOCOMw.security.privacy.bigdata</a><br />
+2020-12-15 <a href="#e8351887c5">★IEEE.ACM.CCGrid</a><br />
+2020-12-15 <a href="#5db313374b">INFOCOM</a><br />
+2020-12-15 <a href="#2b0773861d">IEEE.GI(infocom).global.internet</a><br />
+2020-12-14 <a href="#94084be711">★NetSoft@Tokyo</a></p>
 <h2 id="ijits.infotech.and.security-2020-12-20-top">★ⒿIJITS.infotech.and.security (2020-12-20) <span id="8350073220"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>Call for paper submission<br />
 Please, accept my apologies if you receive this message multiple<br />
