--- a/gcal/deadlines.html
+++ b/gcal/deadlines.html
@@ -1,69 +1,69 @@
 <h1 id="deadlines">deadlines <span id="top"></span></h1>
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <p>this file is generated automatically, do not make manual changes to it!</p>
-<p>2021-07-31 <a href="#ccdc6966e6">(J)BigDataJournal.perfmanagment.large.clusters</a><br />
-2021-06-30 <a href="#bd08655f42">ⒿMDPI.HPC.math</a><br />
-2021-05-31 <a href="#50b0d1de01">(J)wiley.SPE.highperfcomp.apps</a><br />
-2021-05-01 <a href="#9fbf2a5faa">ACM.GoodIT</a><br />
-2021-04-02 <a href="#7282d4fb86">ITC.teletraffic.congress</a><br />
-2021-03-31 <a href="#a5a834d6a2">(J)ACMIntTechJ.multiagent.systems.for.IoT</a><br />
-2021-03-31 <a href="#b998a4eff0">(J)ACMtran.comp.ling.multimedia.IoT</a><br />
-2021-03-31 <a href="#6722d0de66">(J)Elsevier(edge.iot)</a><br />
-2021-03-31 <a href="#97e59c52b4">(J)Elsevier.smart.veh.in.6G</a><br />
-2021-03-31 <a href="#a9927a6859">(J)IEEE.Sensors.indoor.positioning</a><br />
-2021-03-30 <a href="#dab27660e5">(J)JNSM.beyond5G</a><br />
-2021-03-25 <a href="#d32ee2c8c7">IFIP.future.internet.transport</a><br />
-2021-03-21 <a href="#394a236f89">ⒿIEEEsensors.inforpositioning</a><br />
-2021-03-15 <a href="#53cdf1533d">CloudConf.KSEM@tokyo</a><br />
-2021-03-15 <a href="#da14c347bf">(J)MDPI.drone.swarms</a><br />
-2021-03-15 <a href="#b4c3a2baa3">BRAINS.blockchain</a><br />
-2021-03-15 <a href="#95596e2fac">KSEM.knowledge</a><br />
-2021-03-10 <a href="#d093aa63fb">ficloud.future.cloud</a><br />
-2021-03-01 <a href="#a43a5d2c8a">(J)Springer.queueing.learning.control</a><br />
-2021-03-01 <a href="#252173d01a">(J)IEET.green.internet.and.services</a><br />
-2021-02-28 <a href="#9582ef3fcf">jour.mdpi.vehicularfleets</a><br />
-2021-02-28 <a href="#9f8aa2901e">(J)Elsevier.ICN(blockchain.for.covid)</a><br />
-2021-02-25 <a href="#f10836f2f4">ⒿIEEEJ.intell.wireless.control.systems</a><br />
-2021-02-22 <a href="#5dd67e05cd">LANMAN.networking.is.new.normal</a><br />
-2021-02-21 <a href="#f250e192a6">(J)MDPI.mobile.computing</a><br />
-2021-02-21 <a href="#50d095191a">(J)MDPI.Telecom.Journal</a><br />
-2021-02-20 <a href="#323e5a063d">(J)JCN.covid19</a><br />
-2021-02-15 <a href="#0a05807fbd">(J)MDPI.Signals.cybersec.resilience</a><br />
-2021-02-15 <a href="#c84db115b6">(J)MDPI.Sensors.IoT</a><br />
-2021-02-15 <a href="#8560470a16">EAI.WiCOM.wireless</a><br />
-2021-02-15 <a href="#31654f5f37">IEEE.ACM.IWQoS.qos</a><br />
-2021-02-08 <a href="#6816310531">(+J)SAM.security.management</a><br />
-2021-02-07 <a href="#0305d2f2eb">IFIP.newtech.mobility.sec</a><br />
-2021-02-07 <a href="#9e2242d9ba">INFOCOM.demos.posters</a><br />
-2021-02-05 <a href="#c7350afdde">IEEE.ComSoc.CQR.quality.reliability</a><br />
-2021-02-04 <a href="#03bda52321">ACM.SIGMODw.bigdata.dist.envs</a><br />
-2021-02-03 <a href="#81d4ee58ad">IEEE.ICAS.autonomous.systems</a><br />
-2021-02-01 <a href="#77a31eceb8">(BOOK)CambridgeScholars.proposal</a><br />
-2021-02-01 <a href="#d0b06cf2d7">IEEE.IDS.datasecurity</a><br />
-2021-02-01 <a href="#14578b664a">IEEE.HPSC.highperfcomp</a><br />
-2021-02-01 <a href="#fa1c810a58">IEEE.HPSR.highperf.routing.switching</a><br />
-2021-02-01 <a href="#5f695e3a75">IEEE.sec.and.clouds</a><br />
-2021-01-31 <a href="#f0fa3ef3b9">(J)ICT.express.mobile.edge.systems</a><br />
-2021-01-31 <a href="#bfc45ab4fc">(J)Springer.AI4people</a><br />
+<p>2021-01-18 <a href="#c00fa64eaf">EAI.GreeNets.greenenergy</a><br />
+2021-01-20 <a href="#9227ccc591">(J)MDPI.human.computer.interaction</a><br />
+2021-01-20 <a href="#1b1acc2f42">ICCw.DDINS.intelligence4nets</a><br />
+2021-01-20 <a href="#88739f0eef">ICCw.SAGE.smart.green.solutions</a><br />
+2021-01-20 <a href="#9058b8aa48">ACM.HotMobile</a><br />
+2021-01-20 <a href="#41029f1206">ICCw.data.driven.nets</a><br />
+2021-01-20 <a href="#2f3cd7fa3a">ACM.SIGCOMM</a><br />
+2021-01-20 <a href="#fd0b8c0c97">IEEE.ICC.emerging.topics.in.6G</a><br />
+2021-01-21 <a href="#d2019010bc">IEEE.5GloTrials.IoT</a><br />
+2021-01-21 <a href="#1b6de3dfcb">ACM.computing.frontiers</a><br />
+2021-01-21 <a href="#2be1f3820b">IFIP.Networking</a><br />
+2021-01-22 <a href="#7c4c9db8ce">IM.IoT</a><br />
+2021-01-24 <a href="#fc2b0922f2">ACM.IEEE.fog.and.edge</a><br />
+2021-01-26 <a href="#e5bdee61c2">ACM.IoTDI</a><br />
+2021-01-29 <a href="#8287049475">SpringerLNCS.DAIS.distributed.apps</a><br />
+2021-01-30 <a href="#8c63056dd2">COMPSAC</a><br />
+2021-01-30 <a href="#0aa6d448d0">(J)EAI.GeneralCollectiveIntelligence</a><br />
 2021-01-31 <a href="#2df4e5c249">MDPI.sustain</a><br />
 2021-01-31 <a href="#93661b7dcd">(J)IET.SmartCities.IoT.sensing.sustain</a><br />
-2021-01-30 <a href="#0aa6d448d0">(J)EAI.GeneralCollectiveIntelligence</a><br />
-2021-01-30 <a href="#8c63056dd2">COMPSAC</a><br />
-2021-01-29 <a href="#8287049475">SpringerLNCS.DAIS.distributed.apps</a><br />
-2021-01-26 <a href="#e5bdee61c2">ACM.IoTDI</a><br />
-2021-01-24 <a href="#fc2b0922f2">ACM.IEEE.fog.and.edge</a><br />
-2021-01-22 <a href="#7c4c9db8ce">IM.IoT</a><br />
-2021-01-21 <a href="#1b6de3dfcb">ACM.computing.frontiers</a><br />
-2021-01-21 <a href="#d2019010bc">IEEE.5GloTrials.IoT</a><br />
-2021-01-21 <a href="#2be1f3820b">IFIP.Networking</a><br />
-2021-01-20 <a href="#41029f1206">ICCw.data.driven.nets</a><br />
-2021-01-20 <a href="#fd0b8c0c97">IEEE.ICC.emerging.topics.in.6G</a><br />
-2021-01-20 <a href="#88739f0eef">ICCw.SAGE.smart.green.solutions</a><br />
-2021-01-20 <a href="#1b1acc2f42">ICCw.DDINS.intelligence4nets</a><br />
-2021-01-20 <a href="#9058b8aa48">ACM.HotMobile</a><br />
-2021-01-20 <a href="#2f3cd7fa3a">ACM.SIGCOMM</a><br />
-2021-01-20 <a href="#9227ccc591">(J)MDPI.human.computer.interaction</a><br />
-2021-01-18 <a href="#c00fa64eaf">EAI.GreeNets.greenenergy</a></p>
+2021-01-31 <a href="#bfc45ab4fc">(J)Springer.AI4people</a><br />
+2021-01-31 <a href="#f0fa3ef3b9">(J)ICT.express.mobile.edge.systems</a><br />
+2021-02-01 <a href="#d0b06cf2d7">IEEE.IDS.datasecurity</a><br />
+2021-02-01 <a href="#fa1c810a58">IEEE.HPSR.highperf.routing.switching</a><br />
+2021-02-01 <a href="#14578b664a">IEEE.HPSC.highperfcomp</a><br />
+2021-02-01 <a href="#77a31eceb8">(BOOK)CambridgeScholars.proposal</a><br />
+2021-02-01 <a href="#5f695e3a75">IEEE.sec.and.clouds</a><br />
+2021-02-03 <a href="#81d4ee58ad">IEEE.ICAS.autonomous.systems</a><br />
+2021-02-04 <a href="#03bda52321">ACM.SIGMODw.bigdata.dist.envs</a><br />
+2021-02-05 <a href="#c7350afdde">IEEE.ComSoc.CQR.quality.reliability</a><br />
+2021-02-07 <a href="#0305d2f2eb">IFIP.newtech.mobility.sec</a><br />
+2021-02-07 <a href="#9e2242d9ba">INFOCOM.demos.posters</a><br />
+2021-02-08 <a href="#6816310531">(+J)SAM.security.management</a><br />
+2021-02-15 <a href="#8560470a16">EAI.WiCOM.wireless</a><br />
+2021-02-15 <a href="#0a05807fbd">(J)MDPI.Signals.cybersec.resilience</a><br />
+2021-02-15 <a href="#31654f5f37">IEEE.ACM.IWQoS.qos</a><br />
+2021-02-15 <a href="#c84db115b6">(J)MDPI.Sensors.IoT</a><br />
+2021-02-20 <a href="#323e5a063d">(J)JCN.covid19</a><br />
+2021-02-21 <a href="#f250e192a6">(J)MDPI.mobile.computing</a><br />
+2021-02-21 <a href="#50d095191a">(J)MDPI.Telecom.Journal</a><br />
+2021-02-22 <a href="#5dd67e05cd">LANMAN.networking.is.new.normal</a><br />
+2021-02-25 <a href="#f10836f2f4">ⒿIEEEJ.intell.wireless.control.systems</a><br />
+2021-02-28 <a href="#9f8aa2901e">(J)Elsevier.ICN(blockchain.for.covid)</a><br />
+2021-02-28 <a href="#9582ef3fcf">jour.mdpi.vehicularfleets</a><br />
+2021-03-01 <a href="#252173d01a">(J)IEET.green.internet.and.services</a><br />
+2021-03-01 <a href="#a43a5d2c8a">(J)Springer.queueing.learning.control</a><br />
+2021-03-10 <a href="#d093aa63fb">ficloud.future.cloud</a><br />
+2021-03-15 <a href="#b4c3a2baa3">BRAINS.blockchain</a><br />
+2021-03-15 <a href="#53cdf1533d">CloudConf.KSEM@tokyo</a><br />
+2021-03-15 <a href="#da14c347bf">(J)MDPI.drone.swarms</a><br />
+2021-03-15 <a href="#95596e2fac">KSEM.knowledge</a><br />
+2021-03-21 <a href="#394a236f89">ⒿIEEEsensors.inforpositioning</a><br />
+2021-03-25 <a href="#d32ee2c8c7">IFIP.future.internet.transport</a><br />
+2021-03-30 <a href="#dab27660e5">(J)JNSM.beyond5G</a><br />
+2021-03-31 <a href="#a9927a6859">(J)IEEE.Sensors.indoor.positioning</a><br />
+2021-03-31 <a href="#97e59c52b4">(J)Elsevier.smart.veh.in.6G</a><br />
+2021-03-31 <a href="#6722d0de66">(J)Elsevier(edge.iot)</a><br />
+2021-03-31 <a href="#b998a4eff0">(J)ACMtran.comp.ling.multimedia.IoT</a><br />
+2021-03-31 <a href="#a5a834d6a2">(J)ACMIntTechJ.multiagent.systems.for.IoT</a><br />
+2021-04-02 <a href="#7282d4fb86">ITC.teletraffic.congress</a><br />
+2021-05-01 <a href="#9fbf2a5faa">ACM.GoodIT</a><br />
+2021-05-31 <a href="#50b0d1de01">(J)wiley.SPE.highperfcomp.apps</a><br />
+2021-06-30 <a href="#bd08655f42">ⒿMDPI.HPC.math</a><br />
+2021-07-31 <a href="#ccdc6966e6">(J)BigDataJournal.perfmanagment.large.clusters</a></p>
 <h2 id="mdpi.hpc.math-2021-06-30-top">ⒿMDPI.HPC.math (2021-06-30) <span id="bd08655f42"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>Special Issue “Current Trends in Computer Architecture and High Performance<br />
 Computing (HPC) with Their Mathematical Foundations”<br />
@@ -1962,6 +1962,7 @@ JNCA, Springer Wireless Networks, AHSWN &amp; JCN]<br />
 <h2 id="eai.greenets.greenenergy-2021-01-18-top">EAI.GreeNets.greenenergy (2021-01-18) <span id="c00fa64eaf"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>June 6-7, 2021 | Dalian, People’s Republic of China<br />
 Submission Deadline: January 18, 2021 (extended)</p>
+<p><a href="https://greenets.eai-conferences.org/2021/">https://greenets.eai-conferences.org/2021/</a></p>
 <p>We are welcoming online submissions from all over the world to accommodate any possible travel restrictions. Accepted Authors who are unable to attend the event in person will be given an opportunity to present their paper remotely.</p>
 <p>EAI is actively monitoring the COVID-19 situation to ensure the safety, comfort and quality of experience for attendees and a successful course of the event in 2021.</p>
 <p>SCOPE<br />
