--- a/gcal/fundhunt.html
+++ b/gcal/fundhunt.html
@@ -1,11 +1,11 @@
 <h1 id="fundhunt">fundhunt <span id="top"></span></h1>
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <p>this file is generated automatically, do not make manual changes to it!</p>
-<p>2020-09-30 <a href="#70159d238b">airpf人工知能研究振興財団</a><br />
-2020-09-11 <a href="#7ac92177c4">本多記念賞200万・50万・30万.2items</a><br />
-2020-09-01 <a href="#79792e2a8d">三谷産業フェア★金沢</a><br />
+<p>2020-07-22 <a href="#ea6becef05"><strike>国立研究開発法人科学技術振興機構.「IoE社会のエネルギーシステム」</strike></a><br />
 2020-08-05 <a href="#b45e39cd0b"><strike>国土技術政策総合研究所・データ結合999.999.999千円</strike></a><br />
-2020-07-22 <a href="#ea6becef05"><strike>国立研究開発法人科学技術振興機構.「IoE社会のエネルギーシステム」</strike></a></p>
+2020-09-01 <a href="#79792e2a8d">三谷産業フェア★金沢</a><br />
+2020-09-11 <a href="#7ac92177c4">本多記念賞200万・50万・30万.2items</a><br />
+2020-09-30 <a href="#70159d238b">airpf人工知能研究振興財団</a></p>
 <h2 id="本多記念賞200万50万30万.2items-2020-09-11-top">本多記念賞200万・50万・30万.2items (2020-09-11) <span id="7ac92177c4"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>募集要項概要<br />
 年度 2020年度<br />
