--- a/gcal/deadlines.html
+++ b/gcal/deadlines.html
@@ -64,10 +64,10 @@
 <h2 id="mdpi.hpc.math-2021-06-30-top">ⒿMDPI.HPC.math (2021-06-30) <span id="bd08655f42"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>Special Issue “Current Trends in Computer Architecture and High Performance<br />
 Computing (HPC) with Their Mathematical Foundations”<br />
-Mathematics (JIF percentile 91.5%)<br />
+Mathematics (JIF percentile 91.5％)<br />
 <a href="https://www.mdpi.com/journal/mathematics/special_issues/Computer_Architecture_High_Performance_Computing">https://www.mdpi.com/journal/mathematics/special_issues/Computer_Architecture_High_Performance_Computing</a></p>
 <p>Dear Colleagues,</p>
-<p>We are organizing a special issue on “Current Trends in Computer Architecture and High Performance Computing (HPC) with their Mathematical Foundations” in Mathematics (top 10% journal, JIF percentile 91.5% in the “Mathematics” category of the JCR). We invite researchers to submit papers related to modern architectures, and algorithms, code analysis and synthesis techniques for high-performance computing, highlighting the mathematical concepts and applications that constitute the fundamental pillars of modern computer engineering.</p>
+<p>We are organizing a special issue on “Current Trends in Computer Architecture and High Performance Computing (HPC) with their Mathematical Foundations” in Mathematics (top 10％ journal, JIF percentile 91.5％ in the “Mathematics” category of the JCR). We invite researchers to submit papers related to modern architectures, and algorithms, code analysis and synthesis techniques for high-performance computing, highlighting the mathematical concepts and applications that constitute the fundamental pillars of modern computer engineering.</p>
 <p>Prof. Dr. Gabriel Rodríguez<br />
 Prof. Dr. Juan Touriño<br />
 Guest Editors</p>
@@ -92,7 +92,7 @@ Publication: Immediate after acceptance (continuous publication, submissions all
 </ul>
 <p>Manuscript Submission Information</p>
 <p>All papers will be peer-reviewed. Accepted papers will be published continuously in the journal (as soon as accepted) and will be listed together on the special issue website. Research articles, review articles as well as short communications are invited.</p>
-<p>Submitted manuscripts should not have been published previously, nor be under consideration for publication elsewhere (except for conference proceedings papers, which are acceptable provided that the extended version is at least 50% novel with respect to the conference publication). All manuscripts are thoroughly refereed through a single-blind peer-review process.</p>
+<p>Submitted manuscripts should not have been published previously, nor be under consideration for publication elsewhere (except for conference proceedings papers, which are acceptable provided that the extended version is at least 50％ novel with respect to the conference publication). All manuscripts are thoroughly refereed through a single-blind peer-review process.</p>
 <p>Mathematics is a Gold Open Access journal. An article processing charge applies. A guide for authors and other relevant information for submission of manuscripts is available at <a href="https://www.mdpi.com/journal/mathematics/special_issues/Computer_Architecture_High_Performance_Computing/">https://www.mdpi.com/journal/mathematics/special_issues/Computer_Architecture_High_Performance_Computing/</a></p>
 <p>For further information, please contact gabriel.rodriguez@udc.es</p>
 <p><span style="color:#666;"><a href="#top">→top</a></span></p>
